# libsmu

./: .gitignore  .travis.yml  CMakeLists.txt  Distribution.xml.cmakein  LICENSE  Makefile  README.md  annotated.html  appveyor.yml  azure-pipelines.yml  build_python.sh  calib.txt  classes.html  classsmu_1_1Device-members.html  classsmu_1_1Device.html  classsmu_1_1Session-members.html  classsmu_1_1Session.html  classsmu_1_1Signal-members.html  classsmu_1_1Signal.html  cli.cpp  device_cee.cpp  device_cee.hpp  device_m1000.cpp  device_m1000.hpp  device_portaudio.cpp  device_portaudio.hpp  dir_5a127eb4a3ae90b229ca8fe3f3e9dc1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_type.html  globals_vars.html  index.html  (+26 more)
.github/scripts/: install_deps.sh
.github/workflows/: build_wheels.yml
CI/: build_win.ps1  generate_exe.ps1  install_deps_win.ps1  publish_deps.ps1
CI/travis/: before_deploy  before_deploy_darwin.sh  before_deploy_linux.sh  before_install_darwin.sh  before_install_linux.sh  build_deploy_doc.sh  install_linux.sh  lib.sh  make_darwin.sh  make_linux.sh
bindings/python/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  setup.py.cmakein  tox.dist  tox.ini
bindings/python/doc/: conf.py  index.rst
bindings/python/examples/: calibrate  get_samples  get_samples.py  hotplug  hotplug.py  leds  leds.py  multi-cyclic-run.py  multi-run-flush.py  plot-voltage.py  read  read-continuous.py  read-write  read-write-continuous.py  read-write.py  read.py
bindings/python/pysmu/: __init__.py  array.pxd  cpp_libsmu.pxd  exceptions.py  libsmu.pyx  utils.py
bindings/python/pysmu/_vendor/: enum.py
bindings/python/src/: pysmu.cpp
bindings/python/test/: test_session.py
bindings/python/tests/: misc.py  test_channel.py  test_device.py  test_read.py  test_read_write.py  test_session.py  test_signal.py
cmake/: DarwinPackaging.cmake  LinuxPackaging.cmake
contrib/: calib.txt
debian/: README.Debian  README.source  TODO  changelog  control  copyright  libsmu-dev.install  libsmu0.install  libsmu0.links  postinst  postrm  preinst  prerm  python-smu.dirs  python-smu.docs  python-smu.examples  python-smu.install  rules  shlibs.local
debian/patches/: 0001-fix-quote-cxx-flags.patch  0001-remove-absolute-lib-include-paths.patch  0002-regress-cmake-version-depends.patch  0003-force-cpp11.patch  0003-use-explicit-cxx-std-on-older-cmake.patch  series
doc/: CMakeLists.txt  Doxyfile.in  mainpage.dox
doc/img/: writing.xml
examples/: CMakeLists.txt  hotplug.cpp  leds.cpp  read-continuous.cpp  read-write-continuous.cpp  read-write.cpp  read.cpp  smu_stream_multi_out.cpp  smu_stream_out.cpp
img/: reading.xml
include/libsmu/: atomicops.hpp  device.hpp  libsmu.hpp  readerwriterqueue.hpp  session.hpp  signal.hpp  version.hpp.in
python/: CMakeLists.txt  setup.py  setup.py.in
python/pysmu/: __init__.py
python/src/: pysmu.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  (+3 more)
src/: CMakeLists.txt  debug.hpp  device.cpp  device.hpp  device_cee.cpp  device_cee.hpp  device_m1000.cpp  device_m1000.hpp  internal.hpp  libsmu.h  libsmu.hpp  session.cpp  session.hpp  signal.cpp  transfers.cpp  transfers.hpp  usb.cpp  usb.hpp  usb_transfers.cpp  usb_transfers.hpp  version.hpp.in
src/cli/: CMakeLists.txt  getopt.c  getopt_internal.c  getopt_internal.h  smu.cpp
tests/: CMakeLists.txt  cmake-gtest.in  device-test.cpp  fixtures.hpp  gtest-output.hpp  read-test.cpp  run-tests.bat  smu_hotplug.cpp  smu_stream_in.cpp  smu_stream_multi_out.cpp  smu_stream_out.cpp  test-device.cpp  test-multi-read.cpp  test-read-write.cpp  test-read.cpp  test-session.cpp
