include(CheckFunctionExists)
CHECK_FUNCTION_EXISTS(getopt GETOPT_FOUND)

if(NOT WIN32)
	link_directories(${LINK_DIRECTORIES} ${LIBUSB_LIBRARY_DIRS})
endif()
include_directories(SYSTEM ${LIBUSB_INCLUDE_DIRS})

if(NOT GETOPT_FOUND)
	# use internal getopt implementation
	include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src/cli)
	set(GETOPT_C_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../src/cli/getopt.c)
endif()

add_executable(hotplug hotplug.cpp ${GETOPT_C_FILE})
add_executable(read-write read-write.cpp ${GETOPT_C_FILE})
add_executable(read-write-continuous read-write-continuous.cpp ${GETOPT_C_FILE})
add_executable(read read.cpp ${GETOPT_C_FILE})
add_executable(read-continuous read-continuous.cpp ${GETOPT_C_FILE})
add_executable(smu_stream_multi_out smu_stream_multi_out.cpp ${GETOPT_C_FILE})
target_link_libraries(hotplug smu)
target_link_libraries(read-write smu)
target_link_libraries(read-write-continuous smu)
target_link_libraries(read smu)
target_link_libraries(read-continuous smu)
target_link_libraries(smu_stream_multi_out smu)
